2005-04-12  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/runtests.py (program): Fix indentation and a "name
	'program' is not defined" exception.

	* codegen/argtypes.py: Treat guint and gsize as python longs, with
	appropriate parameter conversion formats and return conversion
	functions.  Also treat gssize as long long on LLP64 architectures
	 (thanks jamesh).  Correctly parse "long" parameters on LP64
	architectures. Fixes #300012: "Handling of guint, gsize, gssize,
	and glong in pygtk is broken".

2005-03-27  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override (_wrap_gtk_dialog_set_alternative_button_order):
	Really check in the code. Fixes #171771 (Manish Singh)

2005-03-20  Johan Dahlin  <johan@gnome.org>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_insert):
	Regression, allow the second argument to be unspecified, fixes
	#171027 (Ulrik Svensson)

	* tests/test_liststore.py: Add 2 new tests

2005-03-17  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkmodule.c (init_gtk): Regression, don't crash if sys.argv
	isn't set.

2005-03-16  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_radiobutton.py (RadioButtonTest): New test.

	* tests: Renamed *.py to test_*.py

	* gtk/gtk.override: Allow argument to RadioButtion.set_radio_group 
	to be empty, fixes #170514 (Lorenzo Gil Sanchez)

2005-03-15  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== PyGTK 2.6.1 ===
2005-03-15  Johan Dahlin  <jdahlin@async.com.br>

	* codegen/codegen.py: Check arguments if we have no arguments.
	Fixes bug #170266 (Doug Quale)

	* gtk/gdk.override:
	* gtk/gtktreeview.override: gcc4 patches stolen from redhat

	* NEWS: Updated
	
2005-03-14  Anders Carlsson  <andersca@imendio.com>

	* codegen/reversewrapper.py:
	Remove an extra * in the declaration and cast of GObject 
	types.
	
2005-03-14  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygparamspec.c (pyg_param_spec_getattr): In case the